[project]
name = "ml-bench"
version = "0"
# 3.12 only: torch 2.5.1 has no wheels for newer Pythons; the base's apt python3
# is 3.12.
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.5.1",
    "transformers==4.46.3",
    "accelerate==1.1.1",
    "numpy==2.1.3",
]

# Deps-only project: don't try to build/install ml-bench itself.
[tool.uv]
package = false
