[project]
name = "ml-bench"
version = "0"
requires-python = "==3.14.*"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "datasets",
    "scipy",
    "scikit-learn",
    "pandas",
]

# Deps-only project: don't try to build/install ml-bench itself.
[tool.uv]
package = false
